add_library(eamxx_diagnostics
  atm_density.cpp
  dry_static_energy.cpp
  exner.cpp
  field_at_height.cpp
  field_at_level.cpp
  field_at_pressure_level.cpp
  longwave_cloud_forcing.cpp
  potential_temperature.cpp
  precip_surf_mass_flux.cpp
  relative_humidity.cpp
  sea_level_pressure.cpp
  shortwave_cloud_forcing.cpp
  surf_upward_latent_heat_flux.cpp
  vapor_flux.cpp
  vertical_layer.cpp
  virtual_temperature.cpp
  water_path.cpp
)
target_link_libraries(eamxx_diagnostics PUBLIC eamxx_atm_process eamxx_interpolation)
